# test-fast-api

./: .gitignore  main.py  main1.py  pyproject.toml  requirements.txt  test_endpoint.py
.azure/: config
.github/workflows/: main_test-fast-api.yml
